[package]
name = "ZoomPunk"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
panic-halt = "1.0" # Halts on panic
stm32f7xx-hal = { version = "0.7.0", features = ["stm32f746", "rt"] }

[profile.dev]
codegen-units = 1
debug = true
lto = true

[profile.release]
codegen-units = 1
debug = false
lto = true
