[package]
name = "ZoomPunk"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
embedded-hal = "1.0"
stm32f7xx-hal = { version = "0.8.0", features = ["stm32f746", "rt", "fmc", "ltdc"] }

# Graphics Library
embedded-graphics = "0.8.1"

# Logs
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = {version = "1.0.0", features = ["print-defmt"]}
semihosting = "0.1.20"

[profile.dev]
codegen-units = 1
debug = true
lto = true

[profile.release]
codegen-units = 1
debug = false
lto = true
